--- a/styles.css
+++ b/styles.css
@@ -230,3 +230,50 @@ footer {
 .full-content {
   display: none; /* Ensure content is hidden by default */
 }
+
+.carousel {
+  position: relative;
+  width: 80%;
+  margin: 0 auto;
+  overflow: hidden;
+  background-color: #FFFAEC;
+}
+
+.carousel-container {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-slide {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+.carousel-slide img {
+  width: 100%;
+  display: block;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #FFD03C;
+  border: none;
+  color: #2B2A29;
+  padding: 24px;
+  cursor: pointer;
+}
+
+.carousel-button.prev {
+  left: 10px;
+}
+
+.carousel-button.next {
+  right: 10px;
+}
+
+.carousel h3 {
+  font-size: 16px;
+  font-style: italic;
+}
